<resources>
    <string name="app_name">WeSecure</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="todo">TODO</string>
    <string name="wesecure">WeSecure</string>
    <string name="employee_name">Employee Name</string>
    <string name="emoloyee_id">Emoloyee ID</string>
    <string name="add_image">Add image</string>
    <string name="employee_phone_number">Employee Phone Number</string>
    <string name="submit">Submit</string>
    <string name="admin">Admin</string>
    <string name="non_admin">Non-Admin</string>
    <string name="employee_password">Employee Password</string>
    <string name="employee_type">Employee Type</string>
    <string name="textview">textview</string>
    <string name="from">From :</string>
    <string name="until">Until :</string>
    <string name="reason">Reason :</string>
    <string name="status">Status :</string>
    <string name="reason_for_declining">Reason for declining :</string>
    <string name="approve">approve</string>
    <string name="decline">decline</string>
    <string name="id">ID :</string>
    <string name="wesecure">WeSecure</string>
    <string name="data_entry">Data Entry</string>
    <string name="visitors_list">Visitors List</string>
    <string name="visitor_number">Visitor Number</string>
    <string name="visitor_name">Visitor Name</string>
    <string name="visitor_phone_number">Visitor Phone Number</string>
    <string name="visiting_purpose">Visiting Purpose</string>
</resources>