<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#89D8E3"
    tools:context=".admin.AddEmployee">


    <TextView
        android:id="@+id/titlehome"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:fontFamily="@font/kaushan"
        android:gravity="center"
        android:text="@string/wesecure"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/guideline4.4"
        app:layout_constraintEnd_toEndOf="@id/guideline6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@id/guideline4.3"
        app:layout_constraintVertical_bias="1.0" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4.3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4.4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.086" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.52" />
    <EditText
        android:id="@+id/empname"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/employee_name"
        android:inputType="textPersonName"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/guideline17"
        app:layout_constraintEnd_toEndOf="@id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@id/guideline16"
        android:importantForAutofill="no"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.17" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.11" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.19" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.19" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.28" />

    <EditText
        android:id="@+id/empid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/emoloyee_id"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="text"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toBottomOf="@id/guideline19"
        app:layout_constraintEnd_toEndOf="@id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@id/guideline18"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="246dp" />

    <EditText
        android:id="@+id/empphone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:hint="@string/employee_phone_number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="@id/guideline21"
        app:layout_constraintEnd_toEndOf="@id/guideline9"
        app:layout_constraintStart_toStartOf="@id/guideline8"
        app:layout_constraintTop_toBottomOf="@id/guideline20"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="311dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.28" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3611491" />

    <Button
        android:id="@+id/upload"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/white"
        android:text="@string/add_image"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/guideline23"
        app:layout_constraintEnd_toEndOf="@id/guideline9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline8"
        app:layout_constraintTop_toBottomOf="@id/guideline22"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />

    <Button
        android:id="@+id/submitv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/white"
        android:text="@string/submit"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/guideline27"
        app:layout_constraintEnd_toEndOf="@id/guideline9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline5"
        app:layout_constraintTop_toTopOf="@id/guideline26"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.83" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <EditText
        android:id="@+id/emppass"
        android:layout_width="253dp"
        android:layout_height="55dp"
        android:ems="10"
        android:hint="@string/employee_password"
        android:importantForAccessibility="no"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@id/guideline9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline8"
        app:layout_constraintTop_toBottomOf="@id/guideline21" />

    <EditText
        android:id="@+id/emptype"
        android:layout_width="236dp"
        android:layout_height="53dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/employee_type"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/upload"
        app:layout_constraintEnd_toEndOf="@id/guideline9"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="@id/guideline8" />
    <ImageView
        android:id="@+id/imguploaded"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@id/guideline26"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@id/guideline23" />

</androidx.constraintlayout.widget.ConstraintLayout>