<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="450dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fromtext"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/from"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/guideline6"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toTopOf="@id/guideline4" />

        <TextView
            android:id="@+id/from"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/guideline6"
            app:layout_constraintEnd_toEndOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="@id/guideline4" />

        <TextView
            android:id="@+id/untiltext"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/until"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/guideline7"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toTopOf="@id/guideline6" />

        <TextView
            android:id="@+id/until"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/guideline7"
            app:layout_constraintEnd_toEndOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="@id/guideline6" />

        <TextView
            android:id="@+id/reasontext"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/reason"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/guideline8"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toTopOf="@id/guideline7" />

        <TextView
            android:id="@+id/reason"
            android:layout_width="279dp"
            android:layout_height="86dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/guideline8"
            app:layout_constraintEnd_toEndOf="@id/guideline3"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="@id/guideline7"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/statustext"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/status"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/guideline11"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toTopOf="@id/guideline8" />

        <TextView
            android:id="@+id/status"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/guideline11"
            app:layout_constraintEnd_toEndOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="@id/guideline8" />

        <TextView
            android:id="@+id/declinetext"
            android:layout_width="114dp"
            android:layout_height="97dp"
            android:text="@string/reason_for_declining"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/guideline10"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toTopOf="@id/guideline9"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/decline"
            android:layout_width="234dp"
            android:layout_height="92dp"
            android:autofillHints=""
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="@id/guideline10"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="@id/guideline9"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/vacationok"
            android:layout_width="159dp"
            android:layout_height="47dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#31BF37"
            android:text="@string/approve"
            app:layout_constraintBottom_toBottomOf="@id/guideline9"
            app:layout_constraintCircleRadius="10dp"
            app:layout_constraintEnd_toEndOf="@id/guideline5"
            app:layout_constraintHorizontal_bias="0.807"
            app:layout_constraintStart_toStartOf="@id/guideline1" />

        <Button
            android:id="@+id/vacationnotok"
            android:layout_width="169dp"
            android:layout_height="49dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#DD1607"
            android:text="@string/decline"
            app:layout_constraintBottom_toBottomOf="@id/guideline9"
            app:layout_constraintCircleRadius="10dp"
            app:layout_constraintEnd_toEndOf="@id/guideline3"
            app:layout_constraintHorizontal_bias="0.285"
            app:layout_constraintStart_toStartOf="@id/guideline5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.02" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.98" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.16" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.26" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.57" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.79" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="1.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.68" />

        <TextView
            android:id="@+id/user"
            android:layout_width="99dp"
            android:layout_height="38dp"
            android:gravity="center"
            android:text="@string/id"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/id"
            android:layout_width="276dp"
            android:layout_height="37dp"
            android:layout_marginStart="11dp"
            android:layout_marginEnd="9dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/from"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.962" />

        <ImageView
            android:id="@+id/senddecline"
            android:layout_width="51dp"
            android:layout_height="61dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="13dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/decline"
            app:srcCompat="@android:drawable/ic_menu_send" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>