<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#89D8E3"
    tools:context=".employee.VisitorData">

    <TextView
        android:id="@+id/titlehome"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:fontFamily="@font/kaushan"
        android:gravity="center"
        android:text="@string/wesecure"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/guideline4.4"
        app:layout_constraintEnd_toEndOf="@id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@id/guideline4.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4.3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4.4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.086" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <EditText
        android:id="@+id/visnumber"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/visitor_number"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline17"
        app:layout_constraintEnd_toEndOf="@id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@id/guideline16"
        tools:ignore="TextFields" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.23" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <EditText
        android:id="@+id/visname"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/visitor_name"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline19"
        app:layout_constraintEnd_toEndOf="@id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@id/guideline18"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="246dp" />

    <EditText
        android:id="@+id/visphone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/visitor_phone_number"
        android:inputType="phone"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline21"
        app:layout_constraintEnd_toEndOf="@id/guideline9"
        app:layout_constraintStart_toStartOf="@id/guideline8"
        app:layout_constraintTop_toBottomOf="@id/guideline20"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="311dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <EditText
        android:id="@+id/vispurpose"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints=""
        android:hint="@string/visiting_purpose"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline23"
        app:layout_constraintEnd_toEndOf="@id/guideline9"
        app:layout_constraintStart_toStartOf="@id/guideline8"
        app:layout_constraintTop_toBottomOf="@id/guideline22"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="385dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.61" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.87" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.94" />

    <Button
        android:id="@+id/submit"
        android:layout_width="111dp"
        android:layout_height="48dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="209dp"
        android:backgroundTint="@color/white"
        android:text="@string/submit"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vispurpose" />


</androidx.constraintlayout.widget.ConstraintLayout>